--- a/app/templates/dashboard.hbs
+++ b/app/templates/dashboard.hbs
@@ -1,7 +1,7 @@
 <h1>Beställningar/fjärrlån</h1>
 <div class="row">
   <div class="col-xs-6">
-    {{view 'select' class='form-control' content=libraries optionValuePath='content.id' optionLabelPath='content.name' value=lib}}
+    {{view 'select' class='form-control' content=libraries optionValuePath='content.label' optionLabelPath='content.name' value=location}}
   </div>
   <div class="col-xs-3">
     {{bs-datetimepicker date=fromDate enabledDates=false dateIcon='fa fa-calendar' icons=icons maxDate=toDate format='YYYY-MM-DD'}}
@@ -10,13 +10,15 @@
     {{bs-datetimepicker date=toDate minDate=minToDate maxDate=maxToDate dateIcon='fa fa-calendar' icons=icons format='YYYY-MM-DD'}}
   </div>
 </div>
-<h3>{{numberOfOrders}} beställningar/fjärrlån</h3>
+<hr>
+<h3>{{numberOfOrders}} inkomna beställningar/fjärrlån</h3>
 <div class="row">
-
   <div class="col-xs-12">
     {{high-charts content=numberOfOrdersChartData chartOptions=numberOfOrdersChartOptions}}
   </div>
 </div>
+<hr>
+<h3>Beställningar/fjärrlån med status levererade eller returnerade</h3>
 <div class="row">
   <div class="col-xs-6">
     {{high-charts content=orderTypesData chartOptions=orderTypesOptions}}
